# neuron

./: .gitignore  CMakeLists.txt  DemoWindow.cpp  DemoWindow.hpp  README.md  Selector.cpp  Selector.hpp  Settings.hpp  Team210.nfo  manifest.py  neuron.cpp  neuron.qrc  selector.ui
shaders/: dummy.vert  load.frag
